backend/public/css/table.css
/* Table Header Section */
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 30px;
}

.add-btn {
  background: var(--primary-gradient);
  color: var(--text-white);
  padding: 10px 20px;
  border-radius: 6px;
  cursor: pointer;
  transition: opacity 0.3s ease;
}

.add-btn:hover {
  opacity: 0.9;
}

/* Table Styles */
.products-table {
  width: 100%;
  border-collapse: collapse;
  background: var(--text-white);
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 2px 10px var(--shadow-sm);
  margin-top: 20px;
}

.products-table th,
.products-table td {
  padding: 15px;
  text-align: left;
  border-bottom: 1px solid #eee;
  text-transform: capitalize;
}

.products-table th {
  background: linear-gradient(
    0deg,
    #4c90ff 0%,
    #6aa3ff 20%,
    #88baff 50%,
    #6aa3ff 80%,
    #4c90ff 100%
  );
  color: var(--text-white);
  font-weight: 500;
  text-transform: uppercase;
  font-size: 14px;
  position: relative;
}

.products-table tr td.id {
  max-width: 50px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.products-table tr td.email {
  text-transform: lowercase;
}

.products-table tr:hover {
  background-color: #f8f9fa;
}

/* Table Links */
.products-table a {
  color: var(--primary-color);
  text-decoration: none;
  font-weight: 500;
}

.products-table a:hover {
  text-decoration: underline;
}

/* Status Indicators */
.unavailable-product {
  opacity: 0.6;
  background-color: #f8f8f8;
}

.unavailable-label {
  color: #ff4d4f;
  font-size: 0.8em;
  margin-left: 5px;
}

.status {
  padding: 6px 12px;
  border-radius: 20px;
  font-size: 14px;
  font-weight: 500;
}

.status.unavailable {
  background-color: #ffa39e;
  color: #cf1322;
}

.in-stock {
  background-color: #e3fcef;
  color: #00a854;
}

.out-of-stock {
  background-color: #fff1f0;
  color: #f5222d;
}

/* Action Buttons */
.actions {
  display: flex;
  height: 110px;
  gap: 10px;
  align-items: center;
}

.edit-btn,
.delete-btn,
.restore-btn {
  padding: 8px;
  border-radius: 4px;
  cursor: pointer;
  transition: opacity 0.3s ease;
}

.edit-btn {
  background-color: #e3fcef;
  color: #00a854;
}

.delete-btn {
  background-color: #fff1f0;
  color: #f5222d;
}

.edit-btn:hover,
.delete-btn:hover {
  opacity: 0.8;
}

.deleted-product td:not(.actions) {
  text-decoration: line-through;
  opacity: 0.6;
}

.deleted-product a {
  color: inherit;
}

.deleted-label {
  color: #ff0000;
  font-style: italic;
  margin-left: 5px;
}

.status.deleted {
  background-color: #ff0000;
  color: white;
}

.restore-btn {
  color: #fff;
  background-color: #4caf50;
}

.restore-btn:hover {
  background-color: #45a049;
}

.thumbnail {
  width: 50px;
  height: 90px;
  margin-right: 5px;
  overflow: hidden;
  border-radius: 5px;
}

.thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

